# email-newsletter

./: .env  .gitignore  Cargo.toml  Dockerfile  example.configuration.yaml  sqlx-data.json
.github/workflows/: audit.yml  general.yml
configuration/: base.yaml  example.base.yaml  example.production.yaml  production.yaml
configuration/migrations/: 20230408124239_make_status_not_null_in_subscriptions.sql
migrations/: 20230408143606_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
